# financials

./: LICENSE  README.md  pyproject.toml
src/financials/: loans.py  main.py
tests/: test_loans.py  test_main.py
