[project]
name = "financials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.39.3",
]

[project.scripts]
financials = "financials.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financials"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "jupyterlab>=4.5.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 120
